force-app/main/default/objects/Evaluation__c/Evaluation__c.object-meta.xml
<CustomObject>
    <label>Evaluation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>