force-app/main/default/objects/Evaluation__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>65</length>
    <required>true</required>
    <type>Text</type>
</CustomField>