force-app/main/default/objects/Evaluation__c/fields/Arthroscopes_Needed__c.field-meta.xml
<CustomField>
    <fullName>Arthroscopes_Needed__c</fullName>
    <label>Arthroscopes Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>