force-app/main/default/objects/Evaluation__c/fields/Current_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Current_Hardware__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Hardware</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>