force-app/main/default/objects/Evaluation__c/fields/Current_Number_of_Camera_Sets__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Camera_Sets__c</fullName>
    <label>Current Number of Camera Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>