force-app/main/default/objects/Evaluation__c/fields/Current_Number_of_Video_Towers__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Video_Towers__c</fullName>
    <label>Current Number of Video Towers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>