force-app/main/default/objects/Evaluation__c/fields/Current_Shaver_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Shaver_Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Shaver Provider</label>
    <length>250</length>
    <type>Text</type>
</CustomField>