force-app/main/default/objects/Evaluation__c/fields/Current_ZB_Recon_business__c.field-meta.xml
<CustomField>
    <fullName>Current_ZB_Recon_business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current ZB Recon business</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>