force-app/main/default/objects/Evaluation__c/fields/Eval_Shipping_Postal_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Eval_Shipping_Postal_Code_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Shipping Postal Code/Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>