force-app/main/default/objects/Evaluation__c/fields/Eval_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Eval_Shipping_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Shipping State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>