force-app/main/default/objects/Evaluation__c/fields/Eval_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Eval_Shipping_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Shipping Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>