force-app/main/default/objects/Evaluation__c/fields/Extra_Monitor_Needed__c.field-meta.xml
<CustomField>
    <fullName>Extra_Monitor_Needed__c</fullName>
    <label>Extra Monitor Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>