force-app/main/default/objects/Evaluation__c/fields/Financial_Model__c.field-meta.xml
<CustomField>
    <fullName>Financial_Model__c</fullName>
    <label>Financial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>DRA</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>