force-app/main/default/objects/Evaluation__c/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GPO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>