force-app/main/default/objects/Evaluation__c/fields/Key_Surgeons__c.field-meta.xml
<CustomField>
    <fullName>Key_Surgeons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Surgeons</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>