force-app/main/default/objects/Evaluation__c/fields/Number_of_Arthroscopies_per_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Arthroscopies_per_month__c</fullName>
    <label>Number of Arthroscopies per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>