force-app/main/default/objects/Evaluation__c/fields/Number_of_General_Laparoscopies_per_mth__c.field-meta.xml
<CustomField>
    <fullName>Number_of_General_Laparoscopies_per_mth__c</fullName>
    <label>Number of General Laparoscopies per mth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>