force-app/main/default/objects/Evaluation__c/fields/OR_Coordinator_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>OR_Coordinator_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OR Coordinator Email Address</label>
    <type>Email</type>
</CustomField>