force-app/main/default/objects/Evaluation__c/fields/OR_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>OR_Coordinator_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OR Coordinator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>