force-app/main/default/objects/Evaluation__c/fields/OR_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>OR_Director_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OR Director Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>