force-app/main/default/objects/Evaluation__c/fields/OR_Director_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>OR_Director_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OR Director Phone Number</label>
    <type>Phone</type>
</CustomField>