force-app/main/default/objects/Evaluation__c/fields/Other_Specialties_performed_at_Facility__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialties_performed_at_Facility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Specialties performed at Facility</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>