force-app/main/default/objects/Evaluation__c/fields/Product_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Product_Shipped__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Shipped</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>