force-app/main/default/objects/Evaluation__c/fields/Requested_Number_of_ZEOS_Towers__c.field-meta.xml
<CustomField>
    <fullName>Requested_Number_of_ZEOS_Towers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Number of ZEOS Towers</label>
    <length>250</length>
    <type>Text</type>
</CustomField>