force-app/main/default/objects/Evaluation__c/fields/Requested_Trial_Length__c.field-meta.xml
<CustomField>
    <fullName>Requested_Trial_Length__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Trial Length</label>
    <length>250</length>
    <type>Text</type>
</CustomField>