force-app/main/default/objects/Evaluation__c/fields/Requested_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Trial_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Trial Start Date</label>
    <type>Date</type>
</CustomField>