force-app/main/default/objects/Evaluation__c/fields/Scope_Camera_Type__c.field-meta.xml
<CustomField>
    <fullName>Scope_Camera_Type__c</fullName>
    <label>Scope &amp; Camera Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C-Mount</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>