force-app/main/default/objects/Evaluation__c/fields/Shipping_Receiving_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Receiving_Contact_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping/Receiving Contact Email Address</label>
    <type>Email</type>
</CustomField>