force-app/main/default/objects/Evaluation__c/fields/Shipping_Receiving_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Receiving_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping/Receiving Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>