force-app/main/default/objects/Evaluation__c/fields/Shipping_Receiving_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Receiving_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping/Receiving Phone Number</label>
    <type>Phone</type>
</CustomField>