force-app/main/default/objects/Evaluation__c/fields/SPD_Director_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>SPD_Director_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPD Director Email Address</label>
    <type>Email</type>
</CustomField>