force-app/main/default/objects/Evaluation__c/fields/SPD_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>SPD_Director_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPD Director Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>