force-app/main/default/objects/Evaluation__c/fields/SPD_Director_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>SPD_Director_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPD Director Phone Number</label>
    <type>Phone</type>
</CustomField>