force-app/main/default/objects/Evaluation__c/fields/Special_Requirements_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_Considerations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Requirements/Considerations</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>