force-app/main/default/objects/Evaluation__c/fields/Timeline_for_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Timeline_for_Purchase__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timeline for Purchase</label>
    <length>250</length>
    <type>Text</type>
</CustomField>