force-app/main/default/objects/Evaluation__c/fields/Video_on_Boom__c.field-meta.xml
<CustomField>
    <fullName>Video_on_Boom__c</fullName>
    <label>Video on Boom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>