force-app/main/default/objects/Evaluation__c/fields/ZB_Recon_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ZB_Recon_Contact_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Recon Contact Email Address</label>
    <type>Email</type>
</CustomField>