force-app/main/default/objects/Evaluation__c/fields/ZB_Recon_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>ZB_Recon_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Recon Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>