force-app/main/default/objects/Evaluation__c/fields/ZB_Recon_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ZB_Recon_Contact_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Recon Contact Phone Number</label>
    <type>Phone</type>
</CustomField>