force-app/main/default/objects/Evaluation__c/fields/ZB_Sports_Med_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ZB_Sports_Med_Contact_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Sports Med Contact Email Address</label>
    <type>Email</type>
</CustomField>