force-app/main/default/objects/Evaluation__c/fields/ZB_Sports_Med_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ZB_Sports_Med_Contact_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Sports Med Contact Phone Number</label>
    <type>Phone</type>
</CustomField>